--- a/src/v1/index.html
+++ b/src/v1/index.html
@@ -7,6 +7,7 @@
 
       <link rel="stylesheet" href="assets/vendors/ionic/css/ionic.min.css"/>
       <link rel="stylesheet" href="assets/vendors/angular-chartjs/angular-chart.min.css"/>
+      <link rel="stylesheet" href="assets/vendors/filter-bar/ionic.filter.bar.min.css"/>
       <link rel="stylesheet" href="assets/css/main.css">
   </head>
 
@@ -24,6 +25,7 @@
 
       <script src="assets/vendors/chartjs/Chart.min.js"></script>
       <script src="assets/vendors/angular-chartjs/angular-chart.min.js"></script>
+      <script src="assets/vendors/filter-bar/ionic.filter.bar.min.js"></script>
       <!--<script src="assets/vendors/semantic/semantic.min.js"></script>-->
       <!--<script src="assets/vendors/semantic/angular-semantic-ui.min.js"></script>-->
 
