--- a/src/v1/index.html
+++ b/src/v1/index.html
@@ -8,17 +8,19 @@
       <link rel="stylesheet" href="assets/vendors/ionic/css/ionic.min.css"/>
       <link rel="stylesheet" href="assets/vendors/angular-chartjs/angular-chart.min.css"/>
       <link rel="stylesheet" href="assets/vendors/filter-bar/ionic.filter.bar.min.css"/>
+      <link rel="stylesheet" href="http://cache.amap.com/lbs/static/main.css?v=1.0" />
       <link rel="stylesheet" href="assets/css/main.css">
   </head>
 
-  <body ng-app="app">
-
-      <ion-nav-view></ion-nav-view>
+  <body ng-app="app" >
+        <ion-nav-view></ion-nav-view>
 
       <script src="assets/vendors/ionic/js/ionic.bundle.js"></script>
       <!--<script src="assets/vendors/jquery/jquery.min.js"></script>-->
       <script src="assets/vendors/lodash/lodash.min.js"></script>
       <script src="assets/vendors/ngCordova/ng-cordova.min.js"></script>
+
+      <script src="http://webapi.amap.com/maps?v=1.3&key=8077445fedd3ef0bef95310a333edfac"></script>
 
       <!-- cordova script (this will be a 404 during development) -->
       <script src="cordova.js"></script>
@@ -26,8 +28,8 @@
       <script src="assets/vendors/chartjs/Chart.min.js"></script>
       <script src="assets/vendors/angular-chartjs/angular-chart.min.js"></script>
       <script src="assets/vendors/filter-bar/ionic.filter.bar.min.js"></script>
-      <!--<script src="assets/vendors/semantic/semantic.min.js"></script>-->
-      <!--<script src="assets/vendors/semantic/angular-semantic-ui.min.js"></script>-->
+      <script src="assets/vendors/amap/angular-amap.min.js"></script>
+      <script src="assets/vendors/angular-elastic/elastic.js"></script>
 
       <!-- 项目本身代码都合并到app.js中 -->
       <script src="js/app.js"></script>
